release(1.20.1): stabilize fabric/forge dev runtime and bump to 3.1.1-beta